fix: Correction problème zindex des selectbox visible partiellement

--- a/doctorat-gouv-frontend/src/app/search/search.scss
+++ b/doctorat-gouv-frontend/src/app/search/search.scss
@@ -10,7 +10,6 @@
 
 .search-form {
   position: relative;
-  z-index: 1000;
   overflow: visible !important;
 }
 
@@ -156,13 +155,11 @@
 
 
 .search-form {
-	// background-color: #E3E3FD;
 	background-color: rgb(232, 232, 255); // violet très clair DSFR
 	padding: 2rem; // espace intérieur
 	color: black;
 	width: 100%;
 	margin: 0 auto;
-	//box-shadow: 0 2px 2px rgba(0,0,0,0.1);
 
 	.form-content {
 		
@@ -291,14 +288,8 @@
 /* ========================= */
 /*   DROPDOWN CUSTOM FILTER  */
 /* ========================= */
-/*.dropdown-panel {
-  position: absolute;
-  z-index: 3000 !important;
-}*/
-
 .dropdown-filter {
   position: relative;
-  z-index: 2000;
 }
 
 
@@ -314,6 +305,7 @@
   align-items: center;
   cursor: pointer;
   font-size: 0.95rem;
+   z-index: 2000 !important;
 }
 
 .dropdown-btn:hover {
@@ -335,12 +327,11 @@
   border-radius: 4px;
   margin-top: 4px;
   padding: 1rem;
-  z-index: 20;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
   max-height: 300px;
   overflow-y: auto;
   position: absolute;
-  z-index: 3000 !important;
+  z-index: 5000 !important;
 }
 
 /* ========================= */
